// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`01 - No default theme. 01 - No options at registration. 01 - No extra themes 1`] = `
<div>
  <div />
</div>
`;

exports[`01 - No default theme. 01 - No options at registration. 01 - No extra themes 2`] = `
<div>
  <div>
    Child
  </div>
</div>
`;

exports[`01 - No default theme. 01 - No options at registration. 02 - Ad hoc theme 1`] = `
<div
  className="theme-a-legacy__container___Dr2yM"
>
  <div
    className="theme-a-legacy__content___13JE_"
  >
    Child
  </div>
</div>
`;

exports[`01 - No default theme. 01 - No options at registration. 03 - Context theme 1`] = `
<div>
  <div />
</div>
`;

exports[`01 - No default theme. 01 - No options at registration. 03 - Context theme 2`] = `
<div
  className="theme-b-legacy__container___3HftU"
>
  <div />
</div>
`;

exports[`01 - No default theme. 01 - No options at registration. 04 - Context + ad hoc 1`] = `
<div>
  <div
    className="theme-c-legacy__content___3tfhw"
  />
</div>
`;

exports[`01 - No default theme. 01 - No options at registration. 04 - Context + ad hoc 2`] = `
<div
  className="theme-b-legacy__container___3HftU"
>
  <div
    className="theme-c-legacy__content___3tfhw"
  />
</div>
`;

exports[`01 - No default theme. 01 - No options at registration. 04 - Context + ad hoc 3`] = `
<div
  className="theme-a-legacy__container___Dr2yM"
>
  <div
    className="theme-a-legacy__content___13JE_   theme-c-legacy__content___3tfhw"
  />
</div>
`;

exports[`01 - No default theme. 01 - No options at registration. 04 - Context + ad hoc 4`] = `
<div
  className="theme-b-legacy__container___3HftU"
>
  <div
    className="theme-c-legacy__content___3tfhw"
  />
</div>
`;

exports[`02 - With default theme 01 - No options at registration. 01 - No extra themes 1`] = `
<div
  className="theme-a-legacy__container___Dr2yM"
>
  <div
    className="theme-a-legacy__content___13JE_"
  />
</div>
`;

exports[`02 - With default theme 01 - No options at registration. 01 - No extra themes 2`] = `
<div
  className="theme-a-legacy__container___Dr2yM"
>
  <div
    className="theme-a-legacy__content___13JE_"
  >
    Child
  </div>
</div>
`;

exports[`02 - With default theme 01 - No options at registration. 02 - Ad hoc theme 1`] = `
<div
  className="theme-a-legacy__container___Dr2yM   theme-b-legacy__container___3HftU"
>
  <div
    className="theme-a-legacy__content___13JE_"
  >
    Child
  </div>
</div>
`;

exports[`02 - With default theme 01 - No options at registration. 03 - Context theme 1`] = `
<div
  className="theme-a-legacy__container___Dr2yM"
>
  <div
    className="theme-a-legacy__content___13JE_"
  />
</div>
`;

exports[`02 - With default theme 01 - No options at registration. 03 - Context theme 2`] = `
<div
  className="theme-b-legacy__container___3HftU"
>
  <div
    className="theme-a-legacy__content___13JE_"
  />
</div>
`;

exports[`02 - With default theme 01 - No options at registration. 04 - Context + ad hoc 1`] = `
<div
  className="theme-a-legacy__container___Dr2yM"
>
  <div
    className="theme-a-legacy__content___13JE_   theme-c-legacy__content___3tfhw"
  />
</div>
`;

exports[`02 - With default theme 01 - No options at registration. 04 - Context + ad hoc 2`] = `
<div
  className="theme-b-legacy__container___3HftU"
>
  <div
    className="theme-a-legacy__content___13JE_   theme-c-legacy__content___3tfhw"
  />
</div>
`;

exports[`02 - With default theme 01 - No options at registration. 04 - Context + ad hoc 3`] = `
<div
  className="theme-a-legacy__container___Dr2yM"
>
  <div
    className="theme-c-legacy__content___3tfhw   theme-d-legacy__content___1Cy_8"
  />
</div>
`;

exports[`02 - With default theme 02 - Options at registration 01 - composeTheme 1`] = `
<div
  className="theme-b-legacy__container___3HftU"
>
  <div
    className="theme-a-legacy__content___13JE_"
  />
</div>
`;

exports[`02 - With default theme 02 - Options at registration 02 - composeAdhocTheme 1`] = `
<div>
  <div
    className="theme-c-legacy__content___3tfhw"
  />
</div>
`;

exports[`02 - With default theme 02 - Options at registration 03 - themePriority 1`] = `
Array [
  <div
    className="theme-a-legacy__container___Dr2yM"
  >
    <div
      className="theme-a-legacy__content___13JE_   theme-c-legacy__content___3tfhw"
    />
  </div>,
  <div
    className="theme-b-legacy__container___3HftU"
  >
    <div
      className="theme-a-legacy__content___13JE_   theme-c-legacy__content___3tfhw"
    />
  </div>,
]
`;

exports[`02 - With default theme 02 - Options at registration 03 - themePriority 2`] = `"Invalid priority"`;

exports[`02 - With default theme 02 - Options at registration 04 - Theme props mapping 1`] = `
<div>
  <div />
</div>
`;

exports[`02 - With default theme 02 - Options at registration 04 - Theme props mapping 2`] = `
Object {
  "props": Object {
    "ref": null,
  },
  "theme": Object {
    "container": "theme-a-legacy__container___Dr2yM",
    "content": "theme-a-legacy__content___13JE_",
  },
}
`;

exports[`Compatibility switching 1`] = `"Invalid compatibility mode"`;
